Library/AXL(Library)/Visual Basic/AXDev.bas


' Gets collected data.
Public Declare Function AxlMonitorExReadData Lib "AXL.dll" (ByRef lpItemSize As Long, ByRef lpDataCount As Long, ByRef dpReadData As Double) As Long


' Gets the period of data collection.
Public Declare Function AxlMonitorExReadPeriod Lib "AXL.dll" (ByRef dwpPeriod As Long) As Long



' Linear interpolation about 2 axis including information of offset position for X2, Y2 axis.
Public Declare Function AxmLineMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Long
' Arc interpolation about 2 axis including information of offset position for X2, Y2 axis.
Public Declare Function AxmCircleCenterMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef lpAxes As Long, ByRef dpCenterPosition As Double, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dwCWDir As Long, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Long

' About ECAT Foe
Public Declare Function AxdSetFirmwareUpdateInfo Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwTotalDataSize As Long, ByVal dwTotalPacketSize As Long) As Long
Public Declare Function AxdSetFirmwareDataTrans Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwPacketIndex As Long, ByRef dwaPacketData As Long) As Long
Public Declare Function AxdSetFirmwareUpdate Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef szFileName As Byte, ByVal dwFileNameLen As Long, ByVal dwPassWord As Long) As Long


Public Declare Function AxaSetFirmwareUpdateInfo Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwTotalDataSize As Long, ByVal dwTotalPacketSize As Long) As Long
Public Declare Function AxaSetFirmwareDataTrans Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwPacketIndex As Long, ByRef dwaPacketData As Long) As Long
Public Declare Function AxaSetFirmwareUpdate Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef szFileName As Byte, ByVal dwFileNameLen As Long, ByVal dwPassWord As Long) As Long


Public Declare Function AxmSetFirmwareUpdateInfo Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTotalDataSize As Long, ByVal dwTotalPacketSize As Long) As Long
Public Declare Function AxmSetFirmwareDataTrans Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwPacketIndex As Long, ByRef dwaPacketData As Long) As Long
Public Declare Function AxmSetFirmwareUpdate Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef szFileName As Byte, ByVal dwFileNameLen As Long, ByVal dwPassWord As Long) As Long
    Public Declare Function AxmSetFoeUploadInfo Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTotalDataSize As Long, ByVal dwTotalPacketSize As Long) As Long
    Public Declare Function AxmGetFoeUploadData Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwPacketIndex As Long, ByRef dwaPacketData As Long) As Long
    Public Declare Function AxmSetFoeUpload Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef szFileName As char*, ByVal dwFileNameLen As Long, ByVal dwPassWord As Long) As Long


Public Declare Function AxmMotSetOperationMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwOperationMode As Long) As Long
Public Declare Function AxmMotGetOperationMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef pdwOperationMode As Long) As Long



    Public Declare Function AxcTriggerSetPatternData Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal nDataCnt As Long, ByVal dwOption As Long, ByRef dpPatternData As Double) As Long
    Public Declare Function AxcTriggerGetPatternData Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef npDataCnt As Long, ByRef dwpOption As Long, ByRef dpPatternData As Double) As Long

    Public Declare Function AxmSpiralMoveEx Lib "AXL.dll" (ByVal lCoordNo As Long, ByVal dSpiralPitch As Double, ByVal dTurningCount As Double, ByVal dAngleOfPose As Double, ByVal dwIsInnerDirection As Long, ByVal dVelocity As Double, ByVal dAcceleration As Double, ByVal dDeceleration As Double) As Long
    Public Declare Function AxmFilletMove Lib "AXL.dll" (ByVal lCoordinate As Long, ByRef dPosition As Double, ByRef dFirstVector As Double, ByRef dSecondVector As Double, ByVal dMaxVelocity As Double, ByVal dMaxAccel As Double, ByVal dMaxDecel As Double, ByVal dRadius As Double) As Long

    Public Declare Function AxmSignalIsServoOnSingleAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upOnOff As Long) As Long

    Public Declare Function AxmMotSetTorqueConnection Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lSourceAxisNo As Long, ByVal dwEnable As Long) As Long
    Public Declare Function AxmMotGetTorqueConnection Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef plSourceAxisNo As Long, ByRef pdwEnable As Long) As Long


